--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -70,7 +70,7 @@
     <Compile Include="StringAndIntegerTest.cs" />
     <Compile Include="TextFileTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="InterfaceTest.cs" />
     <Compile Include="XmlTest.cs" />
   </ItemGroup>
   <Choose>
